refactor : 자바 컨벤션 수정 및 구조 단순화